Timeline hide bug fixed, fix color palette, font-size for overflow

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,8 +1,8 @@
-body {
-    background-color: white;
-    color: #161f38 !important;
-    font-family: Gilroy, serif;
-}
+/*body {*/
+    /*background-color: white;*/
+    /*color: #161f38 !important;*/
+    /*font-family: Gilroy, serif;*/
+/*}*/
 
 .vis-item-content {
     color: #161f38;
@@ -17,7 +17,7 @@ body {
 .vis-item.internship {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #c72c41;
     padding: 5px;
     opacity: 1;
@@ -29,7 +29,7 @@ body {
 .vis-item.internship-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #c72c41;
     padding: 5px;
 }
@@ -37,7 +37,7 @@ body {
 .vis-item.project {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: rgb(144,126, 81);
     padding: 5px;
     opacity: 1;
@@ -48,7 +48,7 @@ body {
 .vis-item.project-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: rgb(144,126, 81);
     padding: 5px;
 }
@@ -56,7 +56,7 @@ body {
 .vis-item.volunteer {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #29a19c;
     padding: 5px;
     opacity: 1;
@@ -67,7 +67,7 @@ body {
 .vis-item.volunteer-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #29a19c;
     padding: 5px;
 }
@@ -75,7 +75,7 @@ body {
 .vis-item.certification {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #b030b0;
     padding: 5px;
     opacity: 1;
@@ -86,7 +86,7 @@ body {
 .vis-item.certification-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #b030b0;
     padding: 5px;
 }
@@ -94,7 +94,7 @@ body {
 .vis-item.hackathon {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #3b2c85;
     padding: 5px;
     opacity: 1;
@@ -105,7 +105,7 @@ body {
 .vis-item.hackathon-indicator {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: #3b2c85;
     padding: 5px;
 }
@@ -113,7 +113,7 @@ body {
 .vis-item.event {
     border-width: 0 0 0 5px;
     font-weight: 500;
-    background-color: #eeeeee;
+    background-color: white;
     border-color: rgb(144,126, 81);
     padding: 5px;
 }
@@ -157,7 +157,6 @@ body {
     top: 0;
     margin: 20px;
     z-index: 3 !important;
-    cursor: pointer;
 }
 
 .vis-item.vis-box {
@@ -168,6 +167,8 @@ body {
     margin: 5px;
     border-width: 1px 1px 1px 5px !important;
     position: relative !important;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .profile-timeline-left {
